=== 0.3.1 (Next)

* Your contribution here.

=== 0.3.0 (1/9/2014)

* #19: Support Savon 2 - @drewtempelmeyer.
* Implemented Rubocop, Ruby style linter - @dblock.
* Ruby 1.8.7 and 1.9.2 are no longer supported - @dblock.

=== 0.2.2 (4/29/2013)

* Relaxed thirdparty gem dependency versions - @mperham.

=== 0.2.1 (3/3/2013)

* Fixed date formatting in API requests with localized applications - @soulcutter.

=== 0.2.0 (11/26/2012)

* The gem is now licensed under the MIT license - @dblock.
* Raise specialized configuration and SOAP errors - @dblock.
* Added <tt>TaxCloud::Client.ping</tt> - @dblock.
* Returning a verified <tt>TaxCloud::Address</tt> from <tt>TaxCloud::Address.verify</tt> - @dblock.
* Added <tt>TaxCloud::Address.zip</tt> that returns a 9-digit address zip code, when available - @dblock.
* Returning a <tt>TaxCloud::Responses::Lookup</tt> from <tt>TaxCloud::Transaction.lookup</tt> - @dblock.
* Returning transaction state, ie. <tt>"OK"</tt> from all other TaxCloud transactions. Exceptions are raised on error - @dblock.
* Added support for tax codes and tax code groups lookup with <tt>TaxCloud::TaxCodes</tt> and <tt>TaxCloud::TaxCode::Groups</tt> - @dblock.

=== 0.1.5 (5/9/2012)

* Fixed compatibility with Ruby 1.8.7 and 1.9.3, removed super from constructors for classes which inherit from <tt>Object</tt> - @gfmurphy.

=== 0.1.4 (10/20/2011)

* Upgraded rdoc - @drewtempelmeyer.
* Fixed <tt>.gemspec</tt> dependency declaration for savon - @drewtempelmeyer.

=== 0.1.3 (9/19/2011)

* Added support for the "returned" request - @danielmorrison.
* Refactoreted tests to use vcr and webmock - @danielmorrison.

=== 0.1.0 (8/23/2011)

* Initial public release - @drewtempelmeyer.