@@ -1,6 +1,7 @@
 require 'bundler/gem_tasks'
 require 'rake/testtask'
 require 'rdoc/task'
+require 'vcr'
 
 Rake::TestTask.new(:test) do |test|
   test.libs << 'lib' << 'test'
@@ -19,7 +20,6 @@ end
 load 'lib/tasks/tax_cloud.rake'
 load 'lib/tasks/tax_codes.rake'
 load 'lib/tasks/tax_code_groups.rake'
-
 load 'vcr/tasks/vcr.rake'
 
 require 'rubocop/rake_task'
